# AAE4011-S22526

./: README.md
img/: read.md
lecture_slide_code/week_1/: README.md  gauss_newton_line_fitting.py  task1_code_detection.py  task2_code_detection_and_count.py  task3_code_detection_count_ui.py
lecture_slide_code/week_2/: README.md  logic_regression.py  logic_regression_ui.py
lecture_slide_code/week_3/: EvaPos.py  Solution1.csv  Solution2.csv
ros_package/LIO-SAM/: CMakeLists.txt  LIO-SAM_STUDENT_README.md
ros_package/LIO-SAM/config/: params.yaml
ros_package/aae4011_ai_uas/: CMakeLists.txt  README.md  WSL2_SETUP.md  package.xml  setup.py  update_github.sh
ros_package/aae4011_ai_uas/config/: pointcloud_analyzer.rviz
ros_package/aae4011_ai_uas/launch/: demo.launch  object_detection.launch  pointcloud_analyzer.launch  trajectory_visualizer.launch
ros_package/aae4011_ai_uas/scripts/: logistic_regression_node.py  object_detection_node.py  pointcloud_analyzer.py  setup_wsl2.sh  trajectory_visualizer.py
ros_package/aae4011_ai_uas/src/aae4011_ai_uas/: __init__.py  utils.py
ros_package/aae4011_pcd_extractor/: ARCHITECTURE.md  CMakeLists.txt  README.md  package.xml
ros_package/aae4011_pcd_extractor/launch/: extract_pcd copy.launch  extract_pcd.launch
ros_package/aae4011_pcd_extractor/src/: pcd_extractor_node.cpp
