<?xml version="1.0"?>
<package format="3">
  <name>aae4011_ai_uas</name>
  <version>1.0.0</version>
  <description>
    AI for Unmanned Autonomous Systems - AAE4011
    This ROS package contains a point cloud analyzer for analyzing 3D LiDAR data,
    including point count and frequency analysis.
  </description>
  
  <maintainer email="welson.wen@polyu.edu.hk">Dr. Weisong Wen</maintainer>
  <author email="welson.wen@polyu.edu.hk">Dr. Weisong Wen</author>
  
  <license>Educational - PolyU AAE4011</license>
  <url type="website">https://github.com/weisongwen/AAE4011-S22526</url>
  <url type="repository">https://github.com/weisongwen/AAE4011-S22526</url>
  
  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- Export -->
  <export>
  </export>
</package>
